# sora-unity-sdk

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  DEPS  DEVELOPMENT-WINDOWS.md  DEVELOPMENT.md  NOTICE.md  README.md  THANKS  VERSION  VERSIONS  buildbase.py  canary.py  cmake.ps1  cmake.sh  install_tools.bat  install_tools.ps1  install_tools.sh  package.bat  package.ps1  run.py
.github/: copilot-instructions.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  ccpp.yml  claude.yml
NvCodec/NvCodec/NvDecoder/: NvDecoder.cpp
NvCodec/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h
Sora/: Sora.cs
Sora/Editor/: SoraUnitySdkPostProcessor.cs
SoraSDK/: .gitignore  Sora.cs
SoraSDK/Assets/Scenes/: SampleScene.unity
SoraSDK/ProjectSettings/: ProjectSettings.asset
SoraUnitySdkExamples/: .gitignore  README.md
SoraUnitySdkExamples/Assets/: SoraSample.cs
SoraUnitySdkExamples/Assets/Scenes/: multi_recvonly.unity  multi_sendonly.unity  multi_sendrecv.unity
SoraUnitySdkExamples/Assets/SoraUnitySdk/: Sora.cs
SoraUnitySdkExamples/Assets/SoraUnitySdk/Editor/: SoraUnitySdkPostProcessor.cs
SoraUnitySdkExamples/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
SoraUnitySdkSamples/: .gitignore  README.md
SoraUnitySdkSamples/Assets/: SoraSample.cs
SoraUnitySdkSamples/Assets/SoraUnitySdk/: Sora.cs
SoraUnitySdkSamples/ProjectSettings/: ProjectSettings.asset
android/: SoraAudioManagedActivity.java
android_handsfree_assets/: AndroidManifest.xml  README.md
cmake/: FindJSON.cmake  FindWebRTC.cmake
doc/: ANDROID.md  BUILD_MACOS.md  BUILD_WINDOWS.md  FAQ.md  IOS.md  KNOWN_BUGS.md  QA.md  SET_VIDEO_SIZE.md  USE.md  USE_H264.md  USE_MACOS.md
issues/: 0001-add-h265-video-codec-params.md  0002-add-audio-opus-params-support.md  0003-bug-android-portrait-video-orientation.md
proto/: rtc.proto  sora.proto  sora_conf.proto  sora_conf_internal.proto
src/: android_capturer.h  boost_json.cpp  converter.cpp  converter.h  device_list.cpp  device_list.h  id_pointer.cpp  id_pointer.h  jni_onload.cc  sora.cpp  sora.h  sora_data_channel.h  sora_data_channel_on_asio.h  sora_signaling.cpp  sora_signaling.h  sora_version.h.template  ssl_verifier.cpp  ssl_verifier.h  unity.cpp  unity.h  unity_audio_device.h  unity_camera_capturer.cpp  unity_camera_capturer.h  unity_camera_capturer_d3d11.cpp  unity_camera_capturer_d3d12.cpp  unity_camera_capturer_metal.mm  unity_camera_capturer_null.cpp  unity_camera_capturer_opengl.cpp  unity_camera_capturer_vulkan.cpp  unity_context.cpp  unity_context.h  unity_renderer.cpp  unity_renderer.h  url_parts.h  watchdog.cpp  watchdog.h  websocket.cpp  websocket.h  zlib_helper.h
src/android_helper/: android_capturer.cpp  android_capturer.h  android_codec_factory_helper.cpp  android_codec_factory_helper.h  android_context.cpp  android_context.h  jni_onload.cc
src/hwenc_nvcodec/: nvcodec_h264_encoder.cpp  nvcodec_h264_encoder.h  nvcodec_video_decoder.cpp  nvcodec_video_decoder.h  nvcodec_video_decoder_cuda.cpp  nvcodec_video_decoder_cuda.h
src/mac_helper/: ios_audio_init.h  ios_audio_init.mm  mac_capturer.h  mac_capturer.mm
src/rtc/: device_list.cpp  device_list.h  device_video_capturer.cpp  device_video_capturer.h  h264_format.cpp  h264_format.h  hw_video_decoder_factory.cpp  hw_video_decoder_factory.h  hw_video_encoder_factory.cpp  hw_video_encoder_factory.h  native_buffer.cpp  native_buffer.h  observer.cpp  observer.h  peer_connection_observer.cpp  peer_connection_observer.h  rtc_connection.cpp  rtc_connection.h  rtc_data_manager.h  rtc_manager.cpp  rtc_manager.h  rtc_message_sender.h  rtc_ssl_verifier.cpp  rtc_ssl_verifier.h  scalable_track_source.cpp  scalable_track_source.h  simulcast_video_encoder_factory.cpp  simulcast_video_encoder_factory.h  video_track_receiver.h
src/unity/: IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D12.h  IUnityGraphicsMetal.h  IUnityGraphicsVulkan.h  IUnityInterface.h  IUnityRenderingExtensions.h
